name:           quiver-wai
version:        1.0.0
synopsis:       Quiver-based WAI application combinators
homepage:       https://github.com/zadarnowski/quiver-wai
category:       Control
stability:      alpha

author:         Patryk Zadarnowski
maintainer:     Patryk Zadarnowski <pat@jantar.org>

copyright:      Copyright (c) 2015 Patryk Zadarnowski

description:

    This library provides combinators for writing
    Quiver-based WAI applications.

cabal-version:  >= 1.18
build-type:     Simple
license:        BSD3
license-file:   LICENSE

source-repository head
  type:         git
  location:     https://github.com/zadarnowski/quiver-wai.git

source-repository this
  type:         git
  location:     https://github.com/zadarnowski/quiver-wai.git
  tag:          1.0.0

library
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -O2 -Wall -fno-warn-unused-do-bind -fno-warn-missing-signatures
  exposed-modules:  Control.Quiver.Wai
  build-depends:    base        >= 4.8 && < 5,
                    bytestring  >= 0.10.6.0,
                    http-types  >= 0.8.6,
                    wai         >= 3.0.4.0,
                    quiver      >= 1.0.2
